# Kinetic_MHD_PINN

./: README.md  project_plan.tex
python/: README.md  pyproject.toml
python/cases/: run_backbone_demo.py
python/cases/reduced_ae_benchmark/: compare_python_matlab.py  run_case.py
python/src/kinetic_mhd_pinn/: __init__.py
python/src/kinetic_mhd_pinn/common/: __init__.py  registry.py  scaffold.py  state.py
python/src/kinetic_mhd_pinn/module10_synthetic_diagnostics_inverse_modeling/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module11_gnn_dependency_coupling_optimization/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module1_stellarator_equilibrium_geometry/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module2_energetic_particle_sources/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module3_guiding_center_orbits_wall_losses/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module4_alfven_continuum_eigenmodes/: README.md  __init__.py  benchmark.py  model.py  solver.py
python/src/kinetic_mhd_pinn/module5_kinetic_energetic_particle_drive/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module6_ae_induced_fast_ion_transport/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module7_alpha_heating_profile_evolution/: README.md  __init__.py  solver.py
python/src/kinetic_mhd_pinn/module8_coupled_multiphysics_integration/: README.md  (+2 more)
python/tests/: test_backbone.py  test_basics_curriculum.py  test_module4_reduced_ae.py  test_parallel_structure.py
(+230 files in other folders)
