[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetic-mhd-pinn"
version = "0.2.0"
description = "Modular scaffold for a stellarator energetic-particle Alfvén-eigenmode digital twin"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "scipy>=1.14", "matplotlib>=3.9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
